hard-gists/4d834d429763e953a40c/run.log
=== Docker Run Log for 4d834d429763e953a40c ===
Started at: Mi 29. Okt 15:12:23 CET 2025

[2025-10-29 15:12:24] START: Running container for 4d834d429763e953a40c
[2025-10-29 15:12:24] SUCCESS: Container 5f776ba473b0f57dd1666ed42d9fec6599b1f231ff7a62fa903a030275c31731 started for 4d834d429763e953a40c
=== Container logs for 4d834d429763e953a40c ===
  File "/snippet.py", line 14
    print 'Streaming ' + hoststr
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4d834d429763e953a40c ===
[2025-10-29 15:12:26] INFO: Container 5f776ba473b0f57dd1666ed42d9fec6599b1f231ff7a62fa903a030275c31731 has stopped
